--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
-       android:text="enter text..."
+       android:hint="enter text..."
        android:gravity="top"
        android:layout_margin="7dp"
        
