--- a/res/layout/dialog_p3.xml
+++ b/res/layout/dialog_p3.xml
@@ -11,7 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/dialog_page3_message"
+        android:textColor="#000000"
         android:checked="@bool/mg"
+        android:gravity="center"
+        android:layout_marginLeft="20dp"
         />
 
 <Button
